--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="1"></div>
+    <div class="2"></div>
+    <div class="3"></div>
+    <div class="4"></div>
+    <div class="5"></div>
+    <div class="6"></div>
+    <div class="7"></div>
+    <div class="8"></div>
+    <div class="9"></div>
 </body>
 </html>
