figuring out how factory functions and modules work created the 3x3 layout creating objects for computer, player and gameboard

--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="1"></div>
-    <div class="2"></div>
-    <div class="3"></div>
-    <div class="4"></div>
-    <div class="5"></div>
-    <div class="6"></div>
-    <div class="7"></div>
-    <div class="8"></div>
-    <div class="9"></div>
+    <div class="gameBoardWrap">
+        <div class="gameBoardSquare">1</div>
+        <div class="gameBoardSquare">2</div>
+        <div class="gameBoardSquare">3</div>
+        <div class="gameBoardSquare">4</div>
+        <div class="gameBoardSquare">5</div>
+        <div class="gameBoardSquare">6</div>
+        <div class="gameBoardSquare">7</div>
+        <div class="gameBoardSquare">8</div>
+        <div class="gameBoardSquare">9</div>
+    </div>
+    <div class="createPlayer">
+        <button class="playerCreator">Create Player</button>
+    </div>
+    <div class="background"></div>
+     <div class="welcomePage">
+
+    </div>
 </body>
 </html>
