completed the logic for the game except for the win checker next step is to do the win checker so far everything is working there might be several places where global code can be reduced even more

--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 </head>
 <body>
     <div class="gameBoardWrap">
-        <div class="gameBoardSquare">1</div>
-        <div class="gameBoardSquare">2</div>
-        <div class="gameBoardSquare">3</div>
-        <div class="gameBoardSquare">4</div>
-        <div class="gameBoardSquare">5</div>
-        <div class="gameBoardSquare">6</div>
-        <div class="gameBoardSquare">7</div>
-        <div class="gameBoardSquare">8</div>
-        <div class="gameBoardSquare">9</div>
+        <div data-index = "1" class="gameBoardSquare"></div>
+        <div data-index = "2" class="gameBoardSquare"></div>
+        <div data-index = "3" class="gameBoardSquare"></div>
+        <div data-index = "4" class="gameBoardSquare"></div>
+        <div data-index = "5" class="gameBoardSquare"></div>
+        <div data-index = "6" class="gameBoardSquare"></div>
+        <div data-index = "7" class="gameBoardSquare"></div>
+        <div data-index = "8" class="gameBoardSquare"></div>
+        <div data-index = "9" class="gameBoardSquare"></div>
     </div>
     <div class="createPlayer">
-        <button class="playerCreator">Create Player</button>
+        <button class="gameStarter">Start Game</button>
     </div>
     <div class="background"></div>
      <div class="welcomePage">
-
+        <input type="text" class="playerName">
     </div>
 </body>
 </html>
