added the draw scenario added some styling completed the restart function changed a few principles of how the website functions

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
      <div class="welcomePage">
         <input type="text" class="playerName">
     </div>
+    <div class="winningDisplay">
+        <h2 class="winningText"></h2>
+        <button class="restartButton">Restart Game</button>
+    </div>
 </body>
 </html>
