added the option to choose player 1s name will need to do it for player 2 as well, added some styling changed the divs from being created to being displayed next step is to make the game possible for 1 player and for the computer to play as player 2

--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
         <div data-index = "7" class="gameBoardSquare"></div>
         <div data-index = "8" class="gameBoardSquare"></div>
     </div>
-    <div class="createPlayer">
-        <button class="gameStarter">Start Game</button>
+    <div class="createPlayer active">
+        <div class="inputWrap">
+            <input type="text" class="playerName" placeholder="Input Player Name">        
+            <button class="gameStarter">Start Game</button>
+        </div>
     </div>
     <div class="background"></div>
-     <div class="welcomePage">
-        <input type="text" class="playerName">
-    </div>
+
     <div class="winningDisplay">
         <h2 class="winningText"></h2>
         <button class="restartButton">Restart Game</button>
+
     </div>
 </body>
 </html>
